--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -13,7 +13,7 @@
     "@brand-danger": "#d9534f",
     "@body-bg": "#222",
     "@text-color": "#f8f8f8",
-    "@link-color": "@brand-primary",
+    "@link-color": "#55b",
     "@link-hover-color": "darken(@link-color, 15%)",
     "@link-hover-decoration": "underline",
     "@font-family-sans-serif": "\"Helvetica Neue\", Helvetica, Arial, sans-serif",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=d8ceae0d4bbb9ee75918a459ab0b4616"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=90106c839643b64691d4d9f645a36672"
 }
