--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 url: "https://lnpalmer.github.io"
 markdown: kramdown
 highlighter: rouge
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
