--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -365,8 +365,8 @@
     "@code-bg": "#f9f2f4",
     "@kbd-color": "#fff",
     "@kbd-bg": "#333",
-    "@pre-bg": "#f5f5f5",
-    "@pre-color": "@gray-dark",
+    "@pre-bg": "#333",
+    "@pre-color": "#fff",
     "@pre-border-color": "#ccc",
     "@pre-scrollable-max-height": "340px",
     "@component-offset-horizontal": "180px",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=38c6eec89b9a86e290f8d76be0cc7687"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=037917ee93f8c35dcd082d95eb4c25bd"
 }
