--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -361,7 +361,7 @@
     "@close-font-weight": "bold",
     "@close-color": "#000",
     "@close-text-shadow": "0 1px 0 #fff",
-    "@code-color": "#c7355e",
+    "@code-color": "#f92672",
     "@code-bg": "#454545",
     "@kbd-color": "#fff",
     "@kbd-bg": "#333",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=c77037506a9cebc328761e9255fc14c5"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=0518ab8603dd5511785c12ccacd29d4f"
 }
